form group completed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,6 +21,7 @@
         <h6 routerLink="flipkart">flipkart</h6>
         <h6 routerLink="mail">mail</h6>
         <h6 routerLink="create-account">create Account</h6>
+        <h6 routerLink="create-user">create-user</h6>
         
        
        
