--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,15 @@
 <div class="parent">
     <div class="child">
- 
- <button routerLink="/dashboard">Login</button>
+        <form [formGroup]="loginForm">
+        <label>Email:</label>
+        <input type="text" formControlName="email">
+        <br>
+        <label>Password</label>
+        <input type="password" formControlName="password">
+        <br>
+        <button (click)="login()">login</button>
 
-
+        </form>
+       
     </div>
 </div>
