--- a/src/app/bank/bank.component.html
+++ b/src/app/bank/bank.component.html
@@ -41,6 +41,7 @@
            <td>{{account.id}}</td>  
            <td>
             <button (click)="view(account.id)"class="btn btn-primary">view</button>
+            <button (click)="edit(account.id)"class="btn btn-success">edit</button>
             <button (click)="delete(account.id)" class="btn btn-danger">delete</button>
            </td>
         </tr>
