--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
 <div class="parent">
     <div class="left">
         <h6 routerLink="interpolation">interpolation</h6>
-        
         <h6 routerLink="rectangle">rectangle</h6>
         <h6 routerLink="event-binding">event-binding</h6>
         <h6 routerLink ="two-way-binding">two-way-binding</h6>
@@ -20,18 +19,11 @@
         <h6 routerLink="post">post</h6>
         <h6 routerLink="flipkart">flipkart</h6>
         <h6 routerLink="mail">mail</h6>
+        <h6 routerLink="practice">practice</h6>
         <h6 routerLink="create-account">create Account</h6>
         <h6 routerLink="create-user">create-user</h6>
         
-       
-       
-        
-    
         <button routerLink="/login">logout</button>
-        
-        
-        
-
     </div>
     <div class="right">
 <router-outlet></router-outlet>
