--- a/src/app/star/star.component.html
+++ b/src/app/star/star.component.html
@@ -11,7 +11,7 @@
 </select>
 <br>
     
-<img src="/assets/fivestar.jpeg" *ngIf="rating==5">
+<img src="8" *ngIf="rating==5">
 <img src="/assets/fourstar.png" *ngIf="rating==4">
 <img src="/assets/threestar.png" *ngIf="rating==3">
 <img src="/assets/twostar.png" *ngIf="rating==2">
