--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -48,6 +48,7 @@
            <td>{{vehicle.id}}</td>  
            <td>
             <button (click)="view(vehicle.id)" class="btn btn-primary">view</button>
+            <button (click)="edit(vehicle.id)" class="btn btn-success">edit</button>
             <button class="btn btn-danger">delete</button>
            </td>
         </tr>
