--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -4,7 +4,7 @@
     display: flex;
     
 }
-.child{
+.left{
     height: 100%;
     width:20%;
     background-color: black;
@@ -21,7 +21,7 @@
 }   
 .right{
     height: 100%;
-    width: 80%;
+    width: 100%;
     background-color: rgb(138, 138, 101);
     overflow: auto;
 } 
